--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="uDeep_green">#388e3c</color>
+    <color name="deep_green">#4caf50</color>
+    <color name="light_green">#c8e6c9</color>
+    <color name="light_grey">#BDBDBD</color>
+    <color name="accent_cian">#00bcd4</color>
+    <color name="cian">#009688</color>
+    <color name="medium_black">#212121</color>
 </resources>
