--- a/app/src/main/res/layout/bici_bmx.xml
+++ b/app/src/main/res/layout/bici_bmx.xml
@@ -4,13 +4,14 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:paddingTop="?attr/actionBarSize"
+    android:background="@android:color/black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -53,6 +54,7 @@
                 android:text="Llanta para\n bicicleta BMX\n"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                android:textColor="@android:color/white"
                 android:ellipsize="end"
                 android:visibility="visible" />
 
@@ -62,7 +64,7 @@
                 android:layout_height="300dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:src="@drawable/llanta_bicibmx"
+                android:src="@drawable/llanta_bici_bmx"
                 android:visibility="visible" />
 
             <TextView
@@ -73,6 +75,7 @@
                 android:text="\nDiseñadas específicamente para soportar el uso \nintensivo que incluye saltos, acrobacias y maniobras en todo \ntipo de terrenos. Estas llantas son más pequeñas y extremadamente resistentes,\n enfocadas en ofrecer agarre y durabilidad."
                 android:textSize="14sp"
                 android:ellipsize="end"
+                android:textColor="@android:color/white"
                 android:visibility="visible" />
 
             <TextView
@@ -80,12 +83,14 @@
                 android:layout_height="wrap_content"
                 android:text="Tamaño:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <Spinner
                 android:id="@+id/spinner_tamano_llanta3"
                 android:layout_width="300dp"
                 android:layout_height="48dp"
+                android:textColor="@android:color/darker_gray"
                 android:layout_marginTop="8dp" />
 
             <TextView
@@ -93,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:text="Cantidad:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <LinearLayout
@@ -118,6 +124,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="  1  "
+                    android:textColor="@android:color/white"
                     android:visibility="visible" />
 
                 <Button
