--- a/app/src/main/res/layout/bici_hibrida.xml
+++ b/app/src/main/res/layout/bici_hibrida.xml
@@ -4,13 +4,14 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:paddingTop="?attr/actionBarSize"
+    android:background="@android:color/black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,6 +55,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:ellipsize="end"
+                android:textColor="@android:color/white"
                 android:visibility="visible" />
 
             <ImageView
@@ -73,6 +75,7 @@
                 android:text="\nLa combinación perfecta entre confort y versatilidad.\nAptas para ciudad y caminos de grava ligera.\n Diseñadas para cualquier terreno."
                 android:textSize="14sp"
                 android:ellipsize="end"
+                android:textColor="@android:color/white"
                 android:visibility="visible" />
 
             <TextView
@@ -80,12 +83,15 @@
                 android:layout_height="wrap_content"
                 android:text="Tamaño:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <Spinner
                 android:id="@+id/spinner_tamano_llanta2"
                 android:layout_width="300dp"
                 android:layout_height="48dp"
+                android:foreground="@android:color/white"
+                android:textColor="@android:color/darker_gray"
                 android:layout_marginTop="8dp" />
 
             <TextView
@@ -93,6 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="Cantidad:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <LinearLayout
@@ -118,6 +125,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="  1  "
+                    android:textColor="@android:color/white"
                     android:visibility="visible" />
 
                 <Button
