--- a/app/src/main/res/layout/bici_montana.xml
+++ b/app/src/main/res/layout/bici_montana.xml
@@ -4,13 +4,14 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize">
+    android:paddingTop="?attr/actionBarSize"
+    android:background="@color/medium_black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
+        android:background="@color/medium_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,6 +55,7 @@
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:ellipsize="end"
+                android:textColor="@android:color/white"
                 android:visibility="visible" />
 
             <ImageView
@@ -73,6 +75,7 @@
                 android:text="\nLlantas anchas con taqueado profundo, perfectas \npara terrenos irregulares como lodo, grava o roca.\n Ofrecen máximo agarre y resistencia."
                 android:textSize="14sp"
                 android:ellipsize="end"
+                android:textColor="@android:color/white"
                 android:visibility="visible" />
 
             <TextView
@@ -80,19 +83,23 @@
                 android:layout_height="wrap_content"
                 android:text="Tamaño:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <Spinner
                 android:id="@+id/spinner_tamano_llanta"
                 android:layout_width="300dp"
                 android:layout_height="48dp"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/white"
+                android:dropDownSelector="@color/medium_black"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cantidad:"
                 android:textSize="16sp"
+                android:textColor="@android:color/white"
                 android:layout_marginTop="16dp" />
 
             <LinearLayout
@@ -108,6 +115,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="-"
+                    android:textColor="@android:color/white"
                     android:textSize="20sp"
                     android:visibility="visible" />
 
@@ -118,6 +126,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="  1  "
+                    android:textColor="@android:color/white"
                     android:visibility="visible" />
 
                 <Button
@@ -125,6 +134,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="+"
+                    android:textColor="@android:color/white"
                     android:visibility="visible" />
             </LinearLayout>
 
