--- a/app/src/main/res/layout/bici_bmx.xml
+++ b/app/src/main/res/layout/bici_bmx.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize"
-    android:background="@android:color/black">
+    android:background="@color/medium_black">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/medium_black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -90,8 +90,9 @@
                 android:id="@+id/spinner_tamano_llanta3"
                 android:layout_width="300dp"
                 android:layout_height="48dp"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@android:color/white"
+                android:dropDownSelector="@color/medium_black"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -114,6 +115,7 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="-"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     android:visibility="visible" />
 
@@ -132,8 +134,38 @@
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:text="+"
+                    android:textColor="@android:color/white"
                     android:visibility="visible" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/espacio_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="\n\n"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/precio_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/espacio2_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="\n\n"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
 
             <Button
                 android:id="@+id/button_add_to_cart"
