--- a/app/src/main/res/layout/bici_montana.xml
+++ b/app/src/main/res/layout/bici_montana.xml
@@ -138,6 +138,35 @@
                     android:visibility="visible" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/espacio_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="\n\n"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/precio_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/espacio2_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="\n\n"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
             <Button
                 android:id="@+id/button_add_to_cart"
                 android:layout_width="wrap_content"
