--- a/app/src/main/res/layout/bici_carretera.xml
+++ b/app/src/main/res/layout/bici_carretera.xml
@@ -143,7 +143,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="\n\n"
+                android:text="\n"
                 android:layout_marginEnd="8dp"
                 android:textColor="@android:color/white"
                 android:visibility="visible" />
@@ -154,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:textSize="18sp"
                 android:textColor="@android:color/white"
                 android:visibility="visible" />
 
@@ -162,7 +163,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="\n\n"
+                android:text="\n"
                 android:layout_marginEnd="8dp"
                 android:textColor="@android:color/white"
                 android:visibility="visible" />
