--- a/app/src/main/res/layout/bici_bmx.xml
+++ b/app/src/main/res/layout/bici_bmx.xml
@@ -30,12 +30,17 @@
         app:navGraph="@navigation/mobile_navigation" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_margin="@dimen/activity_vertical_margin"
+        android:layout_marginEnd="20dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nav_host_fragment_activity_main">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/product_details_layout"
@@ -176,6 +181,16 @@
                 android:gravity="center"
                 android:text="Añadir al Carrito"
                 android:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="\n\n"
+                android:textColor="@android:color/white"
+                android:visibility="visible" />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
